--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="card">
+    <div class="container">
       <h1 class="h1text">To-Do List</h1>
 
-      <input type="text" id="todo-input" placeholder="Enter a to-do item" />
+      <input
+        type="text"
+        id="todo-input"
+        placeholder="Enter a to-do item"
+        style="width: 100%"
+      />
 
       <div id="todos-list">
         <!-- <div class="todo" id="0">
