updating my todo app

--- a/index.html
+++ b/index.html
@@ -17,16 +17,76 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="activity-log-container"></div>
+
     <div class="container">
       <h1 class="h1text">To-Do List</h1>
+      <button id="view-logs-btn">View Activity Logs</button>
+      <button onclick="renderBacklogs()">View Backlogs</button>
 
-      <input
-        type="text"
-        id="todo-input"
-        placeholder="Enter a to-do item"
-        style="width: 100%"
-      />
+      <!-- Separate div for the activity log -->
+      <div class="entry_field">
+        <input type="text" id="todo-input" placeholder="Enter a to-do item" />
+        <button type="submit" class="submitBtn" id="submitBtn">Add</button>
 
+        <label for="duedate">Duedate:</label>
+        <input type="date" id="duedate" name="duedate" />
+
+        <label for="category-filter">Category:</label>
+        <input type="text" id="category-filter" />
+
+        <label for="priority-select">Priority:</label>
+        <select id="priority-select">
+          <option value="low">Low</option>
+          <option value="medium">Medium</option>
+          <option value="high">High</option>
+        </select>
+      </div>
+
+      <div class="filter-section">
+        <label for="filter-priority-select">Filter by Priority:</label>
+        <select id="filter-priority-select">
+          <option value="all">All</option>
+          <option value="low">Low</option>
+          <option value="medium">Medium</option>
+          <option value="high">High</option>
+        </select>
+
+        <label for="filter-duedate">Filter by Due Date:</label>
+        <input type="date" id="filter-duedate" name="filter-duedate" />
+
+        <label for="filter-category">Filter by Category:</label>
+        <input type="text" id="filter-category" />
+
+        <label for="sort-by">Sort by:</label>
+        <select id="sort-by">
+          <option value="none">None</option>
+          <option value="duedate">Due Date</option>
+          <option value="priority">Priority</option>
+        </select>
+      </div>
+
+      <div class="search-field-container">
+        <label for="search-term">Search:</label>
+        <input type="text" id="search-term" />
+
+        <label for="search-type">Search Type:</label>
+        <select id="search-type">
+          <option value="similar">Similar Words</option>
+          <option value="partial">Partial Search</option>
+        </select>
+
+        <button id="search-btn">Search</button>
+      </div>
+      <!-- <div style="display: flex">
+        <span>status</span>
+        <span>todo</span>
+        <span>Due Date</span>
+        <span>Priority</span>
+        <span>category</span>
+        <span>edit</span>
+        <span>delete</span>
+      </div> -->
       <div id="todos-list">
         <!-- <div class="todo" id="0">
           <i class="bi bi-circle"></i>
@@ -36,9 +96,6 @@
           <i class="bi bi-trash"></i>
         </div> -->
       </div>
-
-      <!-- <ul id="todo-list"></ul> -->
-      <button type="submit" class="submitBtn" id="submitBtn">Add</button>
     </div>
     <script src="todo.js"></script>
     <footer>Made by @hritiiiiik26</footer>
