added drag and drop feature

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         <span>delete</span>
       </div> -->
       <div id="todos-list">
+        <!-- <div class="draggable-todo" draggable="true" id="todo-${index}">
+          <div class="todo">
+            
+          </div>
+        </div> -->
         <!-- <div class="todo" id="0">
           <i class="bi bi-circle"></i>
           <i class="bi bi-check-circle-fill"></i>
